--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-Hant-TW">
 
 <head>
     <title>情感缺失父母心理測驗</title>
@@ -39,10 +39,10 @@
         </div>
     </nav>
     <main class="mainCustom">
-        <div class="jumbotron bgImg bgImg__top">
+        <section class="jumbotron bgImg bgImg__top">
             <h1 class="display-4 jumbotron__title ">了解情感缺失父母<br>
                 從心靈孤獨中解放</h1>
-        </div>
+        </section>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-5">
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-7">
-                    <div class="content pt-5">
+                    <section class="content pt-5">
                         <h5 class="content__title display-5">你是否曾和父母的相處感受到孤獨</h5>
                         <div class="content__info ">
                             <p>讓孩子展現不安全感的父母，依照程度分成情緒型、神經質、消極型與冷漠型四種類型。儘管每一型危害孩子安全感的方式各異，但這四型父母都無法同理孩子、無法持續給予心理支持，本質上都不夠敏感。提醒你，這四型都有延續性，程度從輕微到嚴重。
@@ -59,7 +59,7 @@
                             <p>根據一些案例，親子間若缺乏情感交流會影響孩子的成年生活，使孩子後更容易感受到孤寂和不安，或是在成年後陷入同樣的人際關係困境。 </p>
 
                         </div>
-                    </div>
+                    </section>
                 </div>
 
             </div>
@@ -68,14 +68,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-7">
-                        <div class="content pt-5 pb-5">
+                        <section class="content pt-5 pb-5">
                             <h5 class="content__title display-5 text-white"> 找出父母屬於哪一類型 </h5>
                             <div class="content__info">
                                 <p class="text-white">
                                     請根據以下選項，選出最相似的特徵。請記住，壓力大時，所有類型都有情緒化特徵；而四個類型父母共同會有特質包括；專注自我、缺乏同理心、不尊重界線、抗拒內心的親密感、拙於溝通、不願反省、拒絕修復關係、情緒反應激烈、衝動、無法維持情感親近等。
                                 </p>
                             </div>
-                        </div>
+                        </section>
                     </div>
                     <div class="col-sm-12 col-md-5 align-self-end">
                         <div class="sectionMiddle__img">
@@ -178,9 +178,10 @@
                     <div class="row">
                         <!-- 第4組 -->
                         <div class="col-sm-12 col-md-4">
+
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck4_1">
-                                <label class="custom-control-label" for="customCheck4_1">毫無修復感情的技巧可言。</label>
+                                <label class="custom-control-label" for="customCheck4_1">經常表現冷漠或生氣。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck4_2">
@@ -188,7 +189,7 @@
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck4_3">
-                                <label class="custom-control-label" for="customCheck4_3">經常表現冷漠或生氣。</label>
+                                <label class="custom-control-label" for="customCheck4_3">過分涉入且不懂尊重界線。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck4_4">
@@ -196,39 +197,42 @@
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck4_5">
-                                <label class="custom-control-label" for="customCheck4_5">和藹可親,但不具保護能力。
-                                </label>
+                                <label class="custom-control-label" for="customCheck4_5">毫無修復感情的技巧可言。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck4_6">
-                                <label class="custom-control-label" for="customCheck4_6">容易激動,會攻擊、辱罵人。</label>
+                                <label class="custom-control-label" for="customCheck4_6">容易激動，會攻擊、辱罵人。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck4_7">
-                                <label class="custom-control-label" for="customCheck4_7">有任何人都不准瑜越的界線。</label>
+                                <label class="custom-control-label" for="customCheck4_7">和藹可親，但不具保護能力。</label>
+                            </div>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck4_8">
+                                <label class="custom-control-label" for="customCheck4_8">有任何人都不准瑜越的界線。</label>
                             </div>
                         </div>
                         <!-- 第5組 -->
                         <div class="col-sm-12 col-md-4">
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck5_1">
-                                <label class="custom-control-label" for="customCheck5_1">有苛刻的標準,事事要求完美。</label>
+                                <label class="custom-control-label" for="customCheck5_1">似乎不與人交流且帶有敵意。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck5_2">
-                                <label class="custom-control-label" for="customCheck5_2">似乎不與人交流且帶有敵意。</label>
+                                <label class="custom-control-label" for="customCheck5_2">有苛刻的標準，事事要求完美。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck5_3">
-                                <label class="custom-control-label" for="customCheck5_3">覺得孩子很煩,完全不想靠近。</label>
+                                <label class="custom-control-label" for="customCheck5_3">覺得孩子很煩，完全不想靠近。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck5_4">
-                                <label class="custom-control-label" for="customCheck5_4">抱持放任心態,裝做一切沒事。</label>
+                                <label class="custom-control-label" for="customCheck5_4">抱持放任心態，裝做一切沒事。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck5_5">
-                                <label class="custom-control-label" for="customCheck5_5">要不太過親近,要不就太過疏遠。</label>
+                                <label class="custom-control-label" for="customCheck5_5">要不太過親近、要不就太過疏遠。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck5_6">
@@ -236,7 +240,7 @@
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck5_7">
-                                <label class="custom-control-label" for="customCheck5_7">關愛孩子,卻不會為孩子挺身而出。</label>
+                                <label class="custom-control-label" for="customCheck5_7">關愛孩子，卻不會為孩子挺身而出。</label>
                             </div>
                         </div>
                         <!-- 第6組 -->
@@ -247,33 +251,39 @@
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck6_2">
-                                <label class="custom-control-label" for="customCheck6_2">忽視自己的孩子,甚或看到孩子就冒火。</label>
+                                <label class="custom-control-label" for="customCheck6_2">絕對不做雙向溝通,開口閉口只談自己。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck6_3">
-                                <label class="custom-control-label" for="customCheck6_3">絕對不做雙向溝通,開口閉口只談自己。</label>
+                                <label class="custom-control-label" for="customCheck6_3">忽視自己的孩子，甚或看到孩子就冒火。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck6_4">
-                                <label class="custom-control-label" for="customCheck6_4">只做有限度溝通,大部分時間都在談自己。</label>
+                                <label class="custom-control-label" for="customCheck6_4">只做有限度溝通，大部分時間都在談自己。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck6_5">
-                                <label class="custom-control-label" for="customCheck6_5">把育兒當成計畫任務,完全不管孩子的需求。</label>
+                                <label class="custom-control-label" for="customCheck6_5">把育兒當成計畫任務，完全不管孩子的需求。</label>
+                            </div>
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" class="custom-control-input" id="customCheck6_6">
+                                <label class="custom-control-label" for="customCheck6_6">期望孩子安慰他們，卻不曾顧及孩子的需求。</label>
                             </div>
                             <div class="custom-control custom-checkbox">
                                 <input type="checkbox" class="custom-control-input" id="customCheck6_7">
-                                <label class="custom-control-label" for="customCheck6_7">期望孩子安慰他們,卻不曾顧及孩子的需求。</label>
-                            </div>
-                            <div class="custom-control custom-checkbox">
-                                <input type="checkbox" class="custom-control-input" id="customCheck6_7">
-                                <label class="custom-control-label" for="customCheck6_7">完全以目標導向忙碌,且目光如豆、以管窺天。</label>
+                                <label class="custom-control-label" for="customCheck6_7">完全以目標導向忙碌，且目光如豆、以管窺天。</label>
                             </div>
                         </div>
                     </div>
 
                 </div>
-                <button type="submit" class="btn btn-primary submitBtn">測驗結果</button>
+
+                <div class="col text-center">
+                    <button type="reset" class="btn btn-outline-info resetBtn">清除重填</button>
+                    <button type="submit" class="btn btn-primary submitBtn" onclick="myFunction()">測驗結果</button>
+                </div>
+                <a onclick="myFunction()">test</a>
+
             </fieldset>
         </form>
     </main>
@@ -296,6 +306,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <script>
+
+        function myFunction() {
+            var array = []
+            var checkboxes = document.querySelectorAll('input[type=checkbox]:checked')
+            for (var i = 0; i < checkboxes.length; i++) {
+                array.push(checkboxes[i].value)
+            }
+            console.log(array);
+        }
+    </script>
 </body>
 
 </html>
