--- a/results.html
+++ b/results.html
@@ -144,7 +144,7 @@
                             parents》
                         </I>琳賽‧吉普森〈Lindsay C.
                         Gibson〉著。
-                        如需要心理醫學診療方面資訊，請尋求專業醫師協助。</div>
+                        如需要心理醫學診療方面資訊，請尋求專業醫師協助。本站目的為程式練習所用。</div>
                 </div>
             </div>
         </div>
