--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light navCustom container">
-        <a class="navbar-brand navCustom__logo" href="#"><img src="img/logo.png" alt="logo"></a>
+        <a class="navbar-brand navCustom__logo" href="index.html"><img src="img/logo.png" alt="logo"></a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">首頁</a>
+                    <a class="nav-link" href="index.html">首頁</a>
                 </li>
 
             </ul>
@@ -311,7 +311,7 @@
 
                 <div class="col text-center">
                     <button type="reset" class="btn btn-outline-info resetBtn">清除重填</button>
-                    <button type="submit" class="btn btn-primary submitBtn" onclick="myFunction()">測驗結果</button>
+                    <button class="btn btn-primary submitBtn" onclick="myFunction()">測驗結果</button>
                 </div>
                 <a onclick="myFunction()">test</a>
 
