--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
 
                 <div class="col text-center">
                     <button type="reset" class="btn btn-outline-info resetBtn">清除重填</button>
-                    <button class="btn btn-primary submitBtn" onclick="myFunction()">測驗結果</button>
+                    <button type="button" onclick="myFunction()" class="btn btn-primary submitBtn">測驗結果</button>
                 </div>
-                <a onclick="myFunction()">test</a>
+                <!-- <a onclick="myFunction()">test</a> -->
 
             </fieldset>
         </form>
