--- a/picTest.html
+++ b/picTest.html
@@ -42,8 +42,12 @@
         <div class="jumbotron bgImg bgImg__top2">
             <h1 class="display-4 jumbotron__title ">測驗結果</h1>
         </div>
-        <div id="legendPlaceholder"></div>
-        <div id="flotcontainer"></div>
+
+
+
+
+
+        <canvas id="chart" width="900" height="200"></canvas>
 
         <div class="sectionResults">
             <div class="container">
@@ -171,10 +175,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <!-- float pie chart  -->
-    <script src="http://static.pureexample.com/js/flot/excanvas.min.js"></script>
-    <script src="http://static.pureexample.com/js/flot/jquery.flot.min.js"></script>
-    <script src="http://static.pureexample.com/js/flot/jquery.flot.pie.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+
+
 
 
     <script src="js/js.js"></script>
