--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light navCustom container">
-        <a class="navbar-brand navCustom__logo" href="index.html"><img src="img/logo.png" alt="logo"></a>
+        <a class="navbar-brand navCustom__logo" href="javascript:void(0)" onclick="removeLs()"><img src="img/logo.png"
+                alt="logo"></a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -313,7 +314,6 @@
                     <button type="reset" class="btn btn-outline-info resetBtn">清除重填</button>
                     <button type="button" onclick="myFunction()" class="btn btn-primary submitBtn">測驗結果</button>
                 </div>
-                <!-- <a onclick="myFunction()">test</a> -->
 
             </fieldset>
         </form>
@@ -328,7 +328,6 @@
 
 
 
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -340,6 +339,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script> -->
 
     <script src="js/js.js"></script>
 </body>
