--- a/picTest.html
+++ b/picTest.html
@@ -44,10 +44,12 @@
         </div>
 
 
+        <div class="styleChart">
+            <canvas id="chart"></canvas>
+        </div>
 
 
 
-        <canvas id="chart" width="900" height="200"></canvas>
 
         <div class="sectionResults">
             <div class="container">
