--- a/results.html
+++ b/results.html
@@ -23,7 +23,8 @@
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light navCustom container">
-        <a class="navbar-brand navCustom__logo" href="index.html"><img src="img/logo.png" alt="logo"></a>
+        <a class="navbar-brand navCustom__logo" href="javascript:void(0)" onclick="removeLs()"><img src="img/logo.png"
+                alt="logo"></a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,8 +43,14 @@
         <div class="jumbotron bgImg bgImg__top2">
             <h1 class="display-4 jumbotron__title ">測驗結果</h1>
         </div>
-        <div id="legendPlaceholder"></div>
-        <div id="flotcontainer"></div>
+
+
+        <div class="styleChart">
+            <canvas id="chart"></canvas>
+        </div>
+
+
+
 
         <div class="sectionResults">
             <div class="container">
@@ -132,7 +139,15 @@
                     <p class="col-sm-12 col-md-9 pt-5 mt-5 text-white">
                         這些情感缺失父母都專注自我、不敏感體貼，因此無法提供孩子情感的滋養。他們欠缺同理心，所以難以溝通，或是情感連結。他們害怕發自内心的真實情感，藉由控制他人感到自在。他們會讓孩子覺得自己的内心被忽略、不被了解；所有人都得順著他們，跟他們在一起讓身邊的人感到精疲力竭。此外，他們也都無法建立雙向的人際互動。
                     </p>
+
+
+
                 </div>
+
+                <div class="col text-center">
+                    <button type="button" onclick="removeLs()" class="btn btn-primary submitBtn">重新測驗</button>
+                </div>
+
             </div>
         </div>
 
@@ -159,11 +174,26 @@
         <!-- Copyright -->
     </footer>
 
+    <div id="background">
+
+        <div class="lds-facebook">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
@@ -171,13 +201,11 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <!-- float pie chart  -->
-    <script src="http://static.pureexample.com/js/flot/excanvas.min.js"></script>
-    <script src="http://static.pureexample.com/js/flot/jquery.flot.min.js"></script>
-    <script src="http://static.pureexample.com/js/flot/jquery.flot.pie.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
 
-    <script src="js/js.js"></script>
+    <script src="js/results.js"></script>
+
 </body>
 
 </html>
