--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <h5 class="content__title display-5 text-white"> 找出父母屬於哪一類型 </h5>
                             <div class="content__info">
                                 <p class="text-white">
-                                    請根據以下選項，選出最相似的特徵。請記住，壓力大時，所有類型都有情緒化特徵；而四個類型父母共同會有特質包括；專注自我、缺乏同理心、不尊重界線、抗拒內心的親密感、拙於溝通、不願反省、拒絕修復關係、情緒反應激烈、衝動、無法維持情感親近等。
+                                    請仔細思考父母其中一人的相處經歷，並根據以下選項，選出最相似的特徵。請記住，壓力大時，所有類型都有情緒化特徵；而四個類型父母共同會有特質包括；專注自我、缺乏同理心、不尊重界線、抗拒內心的親密感、拙於溝通、不願反省、拒絕修復關係、情緒反應激烈、衝動、無法維持情感親近等。
                                 </p>
                             </div>
                         </section>
@@ -100,7 +100,7 @@
 
         <form class="sectionForm">
             <fieldset>
-                <legend class="sectionForm__title">四大類型特質列表
+                <legend class="sectionForm__title">四大類型特質
                 </legend>
                 <div class="container">
                     <div class="row">
