--- a/results.html
+++ b/results.html
@@ -147,7 +147,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <p class="col-sm-12 col-md-9 pt-5 mt-5 text-white">
-                        這些情感缺失父母都專注自我、不敏感體貼，因此無法提供孩子情感的滋養。他們欠缺同理心，所以難以溝通，或是情感連結。他們害怕發自内心的真實情感，藉由控制他人感到自在。他們會讓孩子覺得自己的内心被忽略、不被了解；所有人都得順著他們，跟他們在一起讓身邊的人感到精疲力竭。此外，他們也都無法建立雙向的人際互動。
+                        本測驗目的為測出四種特質的程度，這些情感缺失父母都專注自我、不敏感體貼，因此無法提供孩子情感的滋養。<br>
+                        他們欠缺同理心，所以難以溝通，或是情感連結。他們害怕發自内心的真實情感，藉由控制他人感到自在。<br>
+                        他們會讓孩子覺得自己的内心被忽略、不被了解；所有人都得順著他們，跟他們在一起讓身邊的人感到精疲力竭。此外，他們也都無法建立雙向的人際互動。
                     </p>
 
 
